tests/core/errors/test_exit_code_data/TARGETS.fixture
load(":defs.bzl", "build_fail")

genrule(
    name = "build_success",
    outs = ["out.txt"],
    cmd = "echo success > $@",
)

build_fail(name = "build_fail")
